# KI-f-r-UE

./: README.md  TEMP_PATCH.txt  all_python_sources.txt  pyproject.toml  temp_llm_manager_part2.txt  temp_ps.txt
docs/: open_world_best_practices.md
src/auto_pcg/: __init__.py  __main__.py  cli.py
src/auto_pcg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/auto_pcg/ai/: __init__.py  llm_manager.py  local_llm.py  prompt_engine.py
src/auto_pcg/core/: asset_analyzer.py  asset_scanner.py
src/auto_pcg/data/: __init__.py  asset_database.py  spatial_database.py  texture_library.json
src/auto_pcg/gui/: __init__.py  __main__.py  control_panel.py
src/auto_pcg/models/: schemas.py  spatial.py  terrain.py
src/auto_pcg/pcg/: graph_builder.py  ue_integration.py  unreal_exporter.py
src/auto_pcg/scripts/: ue_pcg_import.py
src/auto_pcg/services/: pcg_service.py
src/auto_pcg/terrain/: __init__.py  heightmap_processor.py  layer_painter.py  material_planner.py
