[project]
name = "auto-pcg"
version = "0.1.0"
description = "Auto-PCG KI-Assistent f?r Unreal Engine 5.4"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.3",
    "llama-cpp-python>=0.2.84"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
